# CaxidyEngine

./: .gitignore  CMakeLists.txt  README.md
SDLGame-TFG/: CMakeLists.txt  SDLGame-TFG.cbp  SDLGame-TFG.depend  SDLGame-TFG.layout
SDLGame-TFG/GraphicEngine/: camera.cpp  camera.h  celshading.cpp  celshading.h  celtexture.cpp  celtexture.h  decorationobject.cpp  decorationobject.h  endmapregion.cpp  gamestate.cpp  gamestate.h  herostate.cpp  herostate.h  loaderthread.cpp  loaderthread.h  object3d.h  objectscene.cpp  rootmap.cpp  rootmap.h  savedmanager.cpp  savedmanager.h  speakingsketch.cpp  speakingsketch.h
SDLGame-TFG/GraphicEngine/avatar/: avatarmove.cpp  avatarmove.h
SDLGame-TFG/GraphicEngine/collection/: materialcollection.cpp  materialcollection.h  meshcollection.cpp  meshcollection.h  soundcollection.cpp  soundcollection.h
SDLGame-TFG/GraphicEngine/context/: context.cpp  context.h
SDLGame-TFG/GraphicEngine/ia/: iaenemy.h
SDLGame-TFG/GraphicEngine/material/: material.cpp  material.h  texture.cpp  texture.h
SDLGame-TFG/GraphicEngine/menu/: controlmenu.cpp  controlmenu.h  deadmenu.cpp  inventorymenu.cpp  inventorymenu.h  mainmenu.cpp  mainmenu.h  menu.h  moviescreen.cpp  moviescreen.h  optionmenu.cpp  optionmenu.h  pausemenu.cpp
SDLGame-TFG/GraphicEngine/mesh/: objectgroup.cpp
SDLGame-TFG/GraphicEngine/voxels/: rottenvoxel.cpp  rottenvoxel.h  slidetrap.h  trapdoor.cpp  trapdoor.h
SDLGame-TFG/VideoGame/: coin.cpp  coin.h  door.cpp  door.h  enemylist.cpp  equipment.cpp  equipment.h  game.cpp  game.h  gamestatechild.cpp  gamestatechild.h  herostate.cpp  herostate.h  inventory.cpp  inventory.h  inventorymenugame.cpp  inventorymenugame.h  item.cpp  item.h  jumpbutton.cpp  jumpbutton.h  movablevoxel.cpp  movablevoxel.h  potion.cpp  potion.h  projectile.cpp  projectile.h  projectilesystem.cpp  respawnvoxel.cpp  respawnvoxel.h  rootmapgame.cpp  rootmapgame.h  rottenvoxel.cpp  rottenvoxel.h  savedmanager.cpp  savedmanager.h  slidetrap.cpp  slidetrap.h  soul.cpp  soul.h  (+7 more)
SDLGame-TFG/VideoGame/avatar/: avatar.cpp  avatar.h  enemy.cpp  enemy.h  hero.cpp  hero.h  mate.cpp  mate.h  meleeenemy.cpp  meleeenemy.h  npc.cpp  npc.h  rangedenemy.cpp  rangedenemy.h
SDLGame-TFG/VideoGame/ia/: iaenemy.h  iarangedenemy.h
SDLGame-TFG/examples/BasicVideoGame/: CMakeLists.txt  game.cpp  herostate.h  potion.h  projectilesystem.h  respawnvoxel.cpp  savedmanager.cpp
SDLGame-TFG/examples/VideoGame/: coin.h  door.cpp  door.h  enemylist.cpp  equipment.h  game.h  potion.cpp  savedmanager.h  soul.cpp  textregion.h
SDLGame-TFG/examples/VideoGame/avatar/: hero.cpp  hero.h  meleeenemy.h  rangedenemy.h
SDLGame-TFG/examples/VideoGame/ia/: iameleeenemy.h  iarangedenemy.h
SDLGame-TFG/maps/: map00.json  map01.json
SDLGame-TFG/resources/maps/: map00.json  map01.json
SDLGame-TFG/resources/save/: save.json
SDLGame-TFG/resources/shaders/: celShading.fs  celShading.vs
SDLGame-TFG/save/: save.json
SDLGame-TFG/shaders/: celShading.fs  celShading.vs  fragmentshader.fs  vertexshader.vs
SDLGame-TFG/sounds/: License.txt
SDLGame-TFG/src/: main.cpp
SDLGame-TFG/src/BasicVideoGame/: CMakeLists.txt  coin.cpp  game.cpp  gamestatechild.cpp  movablevoxel.cpp  movablevoxel.h  projectile.cpp  projectile.h  projectilesystem.cpp  respawnvoxel.h  rootmapgame.cpp  rootmapgame.h
SDLGame-TFG/src/GraphicEngine/: CMakeLists.txt  celshading.cpp  celshading.h  celtexture.cpp  celtexture.h  decorationobject.h  endmapregion.h  notification.h  objectscene.cpp  optionmanager.cpp  optionmanager.h  particlesystem.h  rootmap.h  speakingsketch.cpp  text.h  voxel.h  voxelgroup.h
SDLGame-TFG/src/VideoGame/: CMakeLists.txt  coin.h  door.h  enemylist.h  equipment.h  game.cpp  game.h  gamestatechild.cpp  gamestatechild.h  hero.cpp  herostate.cpp  herostate.h  inventory.h  inventorymenugame.cpp  inventorymenugame.h  item.cpp  item.h  jumpbutton.h  movablevoxel.cpp  movablevoxel.h  potion.h  projectile.cpp  projectile.h  projectilesystem.h  respawnvoxel.h  rootmapgame.cpp  rootmapgame.h  savedmanager.cpp  savedmanager.h  soul.h  soulcarrier.cpp  soulcarrier.h  spiketrap.cpp  spiketrap.h  textregion.cpp  textregion.h
examples/BasicVideoGame/: CMakeLists.txt  coin.h  game.cpp  game.h  gamestatechild.h  herostate.cpp  herostate.h  jumpbuttongame.cpp  jumpbuttongame.h  main.cpp  movablevoxelgame.cpp  movablevoxelgame.h  respawnvoxelgame.cpp  respawnvoxelgame.h  rootmapgame.cpp  rootmapgame.h  savedmanager.h  spiketrap.h
examples/BasicVideoGame/avatar/: hero.cpp  hero.h  npc.cpp
examples/VideoGame/: CMakeLists.txt  door.h  enemylist.h  equipment.cpp  equipment.h  game.h  gamestatechild.h  inventorymenugame.h  jumpbutton.cpp  jumpbuttongame.h  main.cpp  movablevoxel.h  movablevoxelgame.cpp  movablevoxelgame.h  potion.h  projectile.h  projectilesystem.h  respawnvoxelgame.h  rootmapgame.cpp  rootmapgame.h  savedmanager.h  soul.h  soulcarrier.h  spiketrap.cpp  spiketrap.h  textregion.h
examples/VideoGame/avatar/: enemy.cpp  enemy.h  hero.cpp  hero.h  mate.h  meleeenemy.cpp  meleeenemy.h  npc.h  rangedenemy.cpp  rangedenemy.h
examples/VideoGame/ia/: iaenemy.h  iameleeenemy.h  iarangedenemy.h
src/GraphicEngine/: CMakeLists.txt  camera.h  celshading.h  endmapregion.cpp  endmapregion.h  gamestate.h  notification.cpp  objectscene.h  optionmanager.cpp  particle.h  particlesystem.h  voxelgroup.h
src/GraphicEngine/ColladaParser/: GeometryLoader.h  SkinLoader.h  XmlParserUtils.h
src/GraphicEngine/animation/: scriptanimation.h  scriptlmd.h
src/GraphicEngine/avatar/: avatarmove.cpp  avatarmove.h
src/GraphicEngine/collection/: meshcollection.cpp
src/GraphicEngine/context/: context.h
src/GraphicEngine/light/: light.h
src/GraphicEngine/material/: texture.cpp  texture.h
src/GraphicEngine/menu/: controlmenu.h  creditscreen.h  inventorymenu.h  mainmenu.h  menu.h  moviescreen.cpp  moviescreen.h  optionmenu.cpp  pausemenu.h
src/GraphicEngine/mesh/: file_obj.h  mesh.h  objectgroup.cpp
src/GraphicEngine/voxels/: jumpbutton.cpp  jumpbutton.h  movablevoxel.cpp  movablevoxel.h  respawnvoxel.h  slidetrap.h  trapdoor.h
(+249 files in other folders)
