
add_library(GraphicEngine OBJECT 
    "${CMAKE_CURRENT_SOURCE_DIR}/camera.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/celshading.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/decorationobject.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/endmapregion.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/gamestate.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/icon.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/loaderthread.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/nodescenegraph.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/notification.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/object3d.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/objectscene.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/optionmanager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/particle.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/particlesystem.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/profile.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/region.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/rootmap.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/shadowmanager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/shadowtexture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/speakingsketch.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/text.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/voxel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/voxelgroup.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/window.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/animation/animationlist.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/animation/scriptanimation.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/animation/scriptlmd.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/avatar/avatar.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/avatar/avatarmove.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/collection/collection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/collection/materialcollection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/collection/meshcollection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/collection/soundcollection.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/context/context.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/context/materialstack.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/context/matrixstack.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/context/shader.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/controller/controller.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/controller/controllermanager.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/controller/gamepadcontroller.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/controller/keyboardcontroller.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/light/directionallight.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/light/light.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/light/pointlight.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/material/material.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/material/stb_image.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/material/texture.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/acceleratedmovement.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/axisrotation.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/linearmovement.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/matrix4f.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/matrix4fdynamic.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/matrixscript.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/matrixstatic.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/matrix/oscillaterotation.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/controlmenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/creditscreen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/deadmenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/inventorymenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/loadingscreen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/mainmenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/menu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/moviescreen.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/optionmenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/menu/pausemenu.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/file_obj.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/mesh.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/mesh/objectgroup.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/sound/effect.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/sound/music.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/sound/sound.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/voxels/rottenvoxel.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/voxels/slidetrap.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/voxels/trapdoor.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ColladaParser/SkinLoader.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ColladaParser/XmlParserUtils.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ColladaParser/SkeletonLoader.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ColladaParser/GeometryLoader.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ColladaParser/AnimationLoader.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/ColladaParser/ColladaLoader.cpp"
)

target_include_directories(GraphicEngine PRIVATE 
    ${SDL2_INCLUDE_DIR}
    ${SDL2_MIXER_INCLUDE_DIR}
    ${SDL2TTF_INCLUDE_DIR}
    ${OPENGL_INCLUDE_DIR}
    ${GLEW_INCLUDE_DIR}
    "${CMAKE_SOURCE_DIR}/src"
    "${CMAKE_SOURCE_DIR}/src/GraphicEngine"
    "${CMAKE_SOURCE_DIR}/src/VideoGame"
    "${CMAKE_SOURCE_DIR}/resources/lib"
)
